<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloTxt"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNext"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_editext"
                android:backgroundTint="#777777"
                android:backgroundTintMode="screen"
                android:fontFamily="sans-serif-medium"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textColorHighlight="#c9c9c9"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/specialitiesTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/name"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="54dp"
                    android:background="@drawable/border_editext"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#c9c9c9"
                    android:textColorHighlight="#c9c9c9"
                    android:textColorLink="#c9c9c9"
                    android:textCursorDrawable="@drawable/border_editext" />

                <TextView
                    android:id="@+id/featuredPlatesTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/last_name"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/last_nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="54dp"
                    android:background="@drawable/border_editext"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#c9c9c9"
                    android:textColorHighlight="#c9c9c9"
                    android:textColorLink="#c9c9c9"
                    android:textCursorDrawable="@drawable/border_editext" />

                <TextView
                    android:id="@+id/locationTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/locationEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="54dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/border_editext"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="#c9c9c9"
                    android:textColorHighlight="#c9c9c9"
                    android:textColorHint="#c9c9c9"
                    android:textColorLink="#00362F2F"
                    android:textCursorDrawable="@drawable/border_editext" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tituloTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/titulo"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

